# vibe-grocery-bot

./: .dockerignore  .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.env.example  fly.toml
.github/workflows/: ci.yml
migrations/: 20240101000000_init.sql  20240102000000_add_dm_message.sql  20240103000000_add_items_chat_id_index.sql  20240104000000_add_tokens.sql  20240105000000_add_token_metadata.sql
src/: ai.rs  api.rs  command_handler.rs  commands.rs  config.rs  db.rs  handlers.rs  lib.rs  main.rs  messages.rs  stt.rs  system_info.rs  text_utils.rs  utils.rs
src/ai/: common.rs  config.rs  detection.rs  gpt.rs  prompts.rs  stt.rs  vision.rs
src/db/: chat_state.rs  database.rs  delete_session.rs  items.rs  tokens.rs  types.rs
src/handlers/: ai_mode.rs  delete.rs  info.rs  keyboard.rs  list.rs  list_service.rs  parse.rs  photo.rs  text.rs  tokens.rs  voice.rs
src/tests/: util.rs
tests/: api_flows.rs  archive_checked.rs  archive_nuke.rs  config.rs  cross_chat.rs  db_flow.rs  delete_utils.rs  dispatcher_flow.rs  formatting.rs  gpt_parsing.rs  insert_items.rs  normalization.rs  proptest_parsing.rs  stt.rs  system_info.rs  text_parsing.rs  vision.rs  voice_command.rs  voice_parsing.rs
