[package]
name = "shopbot"
version = "0.3.1"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
base64 = "0.21"
git-version = "0.3"

[dev-dependencies]
proptest = "1.7"
wiremock = "0.6"
