[package]
name = "shopbot"
version = "0.3.1"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
teloxide = { version = "0.15", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
base64 = "0.22"
git-version = "0.3"
unicode-segmentation = "1.12"

[dev-dependencies]
proptest = "1.7"
wiremock = "0.6"
serial_test = "3"
